fixed content alignment issue

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
- Theme Name:   Adboard
- Theme URI:    http://fanarch.com
- Description:  Adboard Theme
+ Theme Name:   Advertisers
+ Theme URI:    http://advertisers.io
+ Description:  Advertisers Theme
  Author:       Sam Solomon
  Author URI:   http://solomon.io
  Template: upvote
@@ -91,7 +91,7 @@ box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(223, 19, 112, 0.6
 ------------------------------------------------------------------------------------------------ */
 .container {max-width: 768px;}
 
-.content {margin-left: 25px; margin-bottom: 2em}
+.content {margin-left: 2.5em; margin-bottom: 2em}
 .table { margin: 3em 0;}
 
 .forgot { margin-left: 0; font-size: .5em; font-size: .9em; color: #DF1370 !important;}
@@ -142,7 +142,7 @@ a.navbar-brand { border-bottom: 1px solid #DF1370; color: #fff; padding: 0; marg
 ------------------------------------------------------------------------------------------------ */
 .upvote-ajax img {width: 14px; height: auto;}
 
-.vote {float: left; margin-right: 15px; background-color: #eee; border-radius: 0px; width: 25px; text-decoration: none; cursor: pointer;
+.vote {float: left; background-color: #eee; border-radius: 0px; width: 25px; text-decoration: none; cursor: pointer;
 box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 	-moz-transition: .3s ease-in;
 	-o-transition: .3s ease-in;
@@ -158,7 +158,6 @@ box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 
 /* CONTENT SECTIONS
 ------------------------------------------------------------------------------------------------ */
-.byline {margin-left: 15px;} /*align with vote class*/
 .byline a {color: #DF1370;}
 
 
